Background color changed

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 
 
-		<a href="department/info.html" class="more-link f-right">Learn More &raquo;</a>
+		<a href="department/info.html" class="more-link f-right" style="color: #848482;">Learn More &raquo;</a>
 
 
 
