Changes to the font style have been added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 	<link rel="stylesheet" type="text/css" href="css/nivo-theme.css"/>	
 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 
 
 </head>
