--- a/department/news.html
+++ b/department/news.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/text.css" />
 	<link rel="stylesheet" type="text/css" href="../css/960.css" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 </head>
 
