courses style changed

--- a/grad/grad-courses.html
+++ b/grad/grad-courses.html
@@ -88,16 +88,31 @@
 <div id="wrap-content">
 	
 <div id="content" class="container_16">
-    <h2>Форма обучения:</h2><p>вечерняя</p>
-    
-    <h2>Schedule of classes:</h2>
-    <p>Monday: 18:30 - 20:30 (KGUSTA)</p>
-    <p>Tuesday: 18:30 - 20:30 (KGUSTA)</p>
-    <p>Wednesday: 18:30 - 20:30 (KGUSTA)</p>
-    <p>Saturday: 09:30 - 12:30 (AIU)</p>
+    <div class="schedule-box">
+        <h2 class="schedule-title">Master’s Program Schedule</h2>
 
-    <h2>Нормативный срок обучения:</h2>
-    <p>Магистратура – 3 года.</p>
+        <div class="schedule-section">
+            <h3>Форма обучения:</h3>
+            <p>Вечерняя</p>
+        </div>
+
+        <div class="schedule-section">
+            <h3>Schedule of Classes:</h3>
+            <table class="schedule-table">
+                <tr><th>Day</th><th>Time</th><th>Location</th></tr>
+                <tr><td>Monday</td><td>18:30 – 20:30</td><td>KGUSTA</td></tr>
+                <tr><td>Tuesday</td><td>18:30 – 20:30</td><td>KGUSTA</td></tr>
+                <tr><td>Wednesday</td><td>18:30 – 20:30</td><td>KGUSTA</td></tr>
+                <tr><td>Saturday</td><td>09:30 – 12:30</td><td>AIU</td></tr>
+            </table>
+        </div>
+
+        <div class="schedule-section">
+            <h3>Нормативный срок обучения:</h3>
+            <p>Магистратура – 3 года</p>
+        </div>
+    </div>
+
 </div>
 
 </div>
