contact links made clickable

--- a/department/contact-us.html
+++ b/department/contact-us.html
@@ -109,8 +109,11 @@
 
             <h4 align="left" style="font-size:18px;color:#38558e">E-mails</h4>
             <p>
-                <strong>Computer Science Department:</strong> cs@iaau.edu.kg<br>
-                <strong>The University:</strong> info@iaau.edu.kg<br></p>
+                <strong>Computer Science Department:</strong>
+                <a href="mailto:cs@iaau.edu.kg" class="email-link">cs@iaau.edu.kg</a><br>
+                <strong>The University:</strong>
+                <a href="mailto:info@iaau.edu.kg" class="email-link">info@iaau.edu.kg</a>
+            </p>
         </div>
     </div>
         <!-- END OF CONTENT -->
